tests/ui/consts/const_cmp_type_id.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const_cmp_type_id.rs:3:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0131]: `main` function is not allowed to have generic parameters
  --> $DIR/const_cmp_type_id.rs:7:14
   |
LL | const fn main() {
   |              ^ `main` cannot have generic parameters

error[E0080]: evaluation of constant value failed
  --> $DIR/const_cmp_type_id.rs:10:22
   |
LL |     const _A: bool = TypeId::of::<u8>() < TypeId::of::<u16>();
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ calling non-const function `<TypeId as PartialOrd>::lt`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0080, E0131.
For more information about an error, try `rustc --explain E0080`.
